c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/extra_credit/prefix_in_ternary.c
int main(void) {
    int a = 0;
    return (++a ? ++a : 0);
}