c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/extra_credit/label_declaration.c
int main(void) {
// NOTE: this is a syntax error in C17 but valid in C23
label:
    int a = 0;
    return 0;
}